# git-mage

./: .gitignore  CHANGELOG.md  CREDITS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: SPEC.md
src/: App.test.tsx  App.tsx  styles.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  creds.rs  db.rs  error.rs  lib.rs  main.rs  menu.rs  model.rs  supervisor.rs  terminal.rs  watcher.rs
src-tauri/src/forge/: api.rs  mod.rs
src-tauri/src/git/: cmd.rs  commit.rs  gitflow.rs  graph.rs  history.rs  hunk.rs  keys.rs  lfs.rs  mod.rs  ops.rs  profile.rs  remotes.rs  signing.rs  stage.rs  stash.rs  status.rs  submodule.rs  worktree.rs
src-tauri/src/ipc/: commands.rs
src/features/: CloneModal.tsx  ConflictEditor.tsx  ContextMenu.tsx  DetailPanel.tsx  DiffView.tsx  Feedback.tsx  FileTree.tsx  HunkView.tsx  Icon.test.tsx  Icon.tsx  Logo.tsx  PromptModal.tsx  RebaseModal.tsx  RepoMenu.tsx  RepoView.tsx  Toolbar.tsx  UpdateBanner.tsx  clone.test.ts  fantasyIcons.ts
src/features/agents/: AgentSessionView.tsx  AgentTerminal.tsx  AgentsPanel.tsx  status.ts
src/features/explorer/: Explorer.test.tsx  Explorer.tsx  tree.test.ts  tree.ts
src/features/forge/: ForgePanel.tsx  NewPrModal.tsx
src/features/graph/: CommitGraph.tsx  GraphActions.tsx  dnd.test.ts  dnd.ts
src/features/history/: BlameView.test.tsx  BlameView.tsx  FileHistoryView.tsx
src/features/palette/: CommandPalette.tsx
src/features/profiles/: ConnectionCreds.tsx  ProfilesPanel.test.tsx  ProfilesPanel.tsx
src/features/repos/: RepoSidebar.tsx
src/features/settings/: SettingsPanel.tsx
src/features/shortcuts/: ShortcutsPanel.tsx
src/features/status/: StatusPanel.tsx
src/i18n/: dict.test.ts  dict.ts  useT.ts
src/ipc/: commands.ts  events.ts
src/lib/: fuzzy.test.ts  fuzzy.ts  keymap.ts
src/store/: repos.test.ts  repos.ts
src/test/: setup.ts
src/types/: git.ts
(+2 files in other folders)
