[package]
name = "gitmage"
version = "0.4.0"
description = "GitMage — open-source, fast, lightweight Git client"
authors = ["GitMage contributors"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = ""

[lib]
name = "gitmage_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
gix = "0.85.0"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
notify = "8.2.0"
portable-pty = "0.9.0"
reqwest = { version = "0.13", features = ["json"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.7.1"
thiserror = "2.0.18"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

# Dependencies are added via `cargo add` so versions resolve to what exists on
# crates.io. Expected set:
#   build:   tauri-build
#   runtime: tauri, tauri-plugin-dialog, serde, gix, rusqlite (bundled),
#            notify, thiserror
